--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,3 +1,3 @@
 %section#profiles
   - @profiles.each do |profile|
-    %a= profile.firstname
+    %a{:title => profile.display_name}= profile.firstname
