refactored haml and added avatar image

--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,3 +1,4 @@
 %section#profiles
   - @profiles.each do |profile|
-    %a{:title => profile.display_name}= profile.firstname
+    %a{:title => profile.display_name}
+      %img{:src => profile.avatar_url}
