--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the profiles controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+section#profiles {
+  ul {
+    list-style: none;
+    margin: 0;
+    li { 
+      float: left;
+      display: inline; 
+    }
+  }
+}
