added gravatar support

--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -3,4 +3,4 @@
     - @profiles.each do |profile|
       %li
         %a{:title => profile.display_name}
-          %img{:src => profile.avatar_url}
+          %img{:src => profile.gravatar_url}
