--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,5 +1,7 @@
 %section#profiles
   %ul
+    %li
+      =link_to image_tag("add_new.png"), new_profile_path, :title => "Add Profile", :id => "new_profile"
     - @profiles.each do |profile|
       %li
         %a{:title => profile.display_name}
