added tooltip to new user avatar

--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -1,7 +1,7 @@
 %section#profiles
   %ul
     %li
-      =link_to image_tag("add_new.png"), new_profile_path, :title => "Add Profile", :id => "new_profile"
+      =link_to image_tag("add_new.png"), new_profile_path, :title => "Add Profile", :id => "new_profile", :rel => "tooltip", :title => "Add User"
     - @profiles.each do |profile|
       %li
         %a{:rel => "tooltip", :title => profile.display_name}
