--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -7,6 +7,8 @@
     = f.input :surname
     = f.input :username
     = f.input :email
+    = f.input :website
+    
     .form-actions
       = f.submit nil, :class => 'btn btn-primary'
       = link_to 'Cancel', profiles_path, :class => 'btn'
