added twitter to profile

--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -8,7 +8,8 @@
     = f.input :username
     = f.input :email
     = f.input :website
-    
+    = f.input :twitter
+
     .form-actions
       = f.submit nil, :class => 'btn btn-primary'
       = link_to 'Cancel', profiles_path, :class => 'btn'
