added github account to profile

--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -9,6 +9,7 @@
     = f.input :email
     = f.input :website
     = f.input :twitter
+    = f.input :github
 
     .form-actions
       = f.submit nil, :class => 'btn btn-primary'
