styled profile page

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -10,6 +10,15 @@ section#profiles
     li 
       float: left
       display: inline
+
+section#profile
+  ul
+    list-style: none
+    margin: 0
+    li
+      float: left
+      display: inline
+      padding: 10px
     
   
 
