--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,13 +1,16 @@
 %section#profile
   .row
-    .span12{:class => "centered"}
+    .span12
       %ul
         %li
-          website: #{@profile.website}
+          %strong website: 
+          = link_to @profile.website, "http://#{@profile.website}"
         %li
-          twitter: #{@profile.twitter}
+          %strong twitter: 
+          = link_to @profile.twitter, "http://twitter.com/#{@profile.twitter}"
         %li
-          github: #{@profile.github}
+          %strong github: 
+          = link_to @profile.github, "http://github.com/#{@profile.github}"
 
 
   = @profile.firstname
