changed profile wall to fluid grid

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,5 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body{:class => "#{controller.controller_name}"}
-    .container
+    .container-fluid
       = yield
