--- a/app/assets/stylesheets/bootstrap_and_overrides.css.sass
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.sass
@@ -10,3 +10,21 @@ $navbarLinkColor: #eee
 @import "bootstrap"
 @import "profiles"
 @import "form"
+
+/* ----------------------------------------------------------------------------
+ * Global
+ * ------------------------------------------------------------------------- */
+
+/* --- Base --- */
+
+html
+  background: #fff
+  font-size: 16px
+
+body
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-size: 62.5%
+
+img
+  max-width: 100%
+
