--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -1,13 +1,20 @@
 body.profiles
   .container-fluid
     padding: 0
+
+/* ----------------------------------------------------------------------------
+ * Modules
+ * ------------------------------------------------------------------------- */
+
+ /* profile wall */
     
-section#profiles 
+section.profile-wall 
   width: 120%
-  ul
+  .profile-items
     list-style: none
     margin: 0
-    li 
+    .profile-item, 
+    .new-profile-item
       float: left
       display: inline
 
