restyled individual profile

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -18,11 +18,14 @@ section.profile-wall
       float: left
       display: inline
 
-section#profile
-  ul
+
+/* individual profile */
+
+section.profile
+  .summary-info
     list-style: none
     margin: 0
-    li
+    .summary-info-item
       float: left
       display: inline
       padding: 10px
