--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,16 +1,16 @@
-%section#profile
-  .row
-    .span12
-      %ul
-        %li
-          %strong website: 
-          = link_to @profile.website, "http://#{@profile.website}"
-        %li
-          %strong twitter: 
-          = link_to @profile.twitter, "http://twitter.com/#{@profile.twitter}"
-        %li
-          %strong github: 
-          = link_to @profile.github, "http://github.com/#{@profile.github}"
-
+.row-fluid
+  %section.profile
+    .row-fluid
+      .span12
+        %ul.summary-info
+          %li.summary-info-item
+            %strong website: 
+            = link_to @profile.website, "http://#{@profile.website}"
+          %li.summary-info-item
+            %strong twitter: 
+            = link_to @profile.twitter, "http://twitter.com/#{@profile.twitter}"
+          %li.summary-info-item
+            %strong github: 
+            = link_to @profile.github, "http://github.com/#{@profile.github}"
 
   = @profile.firstname
