restructed sass file

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -1,7 +1,3 @@
-body.profiles
-  .container-fluid
-    padding: 0
-
 /* ----------------------------------------------------------------------------
  * Modules
  * ------------------------------------------------------------------------- */
@@ -29,6 +25,17 @@ section.profile
       float: left
       display: inline
       padding: 10px
+
+
+/* ----------------------------------------------------------------------------
+ * Overrides
+ * ------------------------------------------------------------------------- */
+
+/* container */
+
+body.profiles
+  .container-fluid
+    padding: 0
     
   
 
