some styling changes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.sass
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.sass
@@ -8,6 +8,7 @@ $navbarLinkColor: #eee
 
 
 @import "bootstrap"
+@import "compass/css3"
 @import "profiles"
 @import "form"
 
@@ -27,4 +28,5 @@ body
 
 img
   max-width: 100%
+
 
