--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -19,8 +19,9 @@ section.profile-wall
 
 section.profile
   .summary-info
+    width: 50%
     list-style: none
-    margin: 0
+    margin: 0 auto
     .summary-info-item
       float: left
       display: inline
