style profile page - added banner

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -18,6 +18,16 @@ section.profile-wall
 /* individual profile */
 
 section.profile
+  .profile-header
+    padding-top: 100px
+    img
+      float: left
+      border: 3px solid #fff
+      width: 85px
+      height: 85px
+      margin: 0 20px 20px
+    .profile-name
+      color: #fff
   .summary-info
     width: 50%
     list-style: none
@@ -34,9 +44,11 @@ section.profile
 
 /* container */
 
-body.profiles
+body.font-page
   .container-fluid
     padding: 0
-    
+
+body
+  background: url('site-stripe.png')
   
 
