--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -5,6 +5,7 @@
       Profile
     = f.input :firstname
     = f.input :surname
+    = f.input :job_role
     = f.input :username
     = f.input :email
     = f.input :website
