enhancements to the profile page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.sass
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.sass
@@ -9,6 +9,7 @@ $navbarLinkColor: #eee
 
 @import "bootstrap"
 @import "compass/css3"
+@import "compass/utilities/text/replacement"
 @import "profiles"
 @import "form"
 
