refine where the site stripe appears

--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -71,7 +71,7 @@ body.font-page
   .container-fluid
     padding: 0
 
-body
+body.individual-profile-page
   background: url('site_stripe.png')
   
 
