added sorcery to application

--- a/app/assets/stylesheets/form.css.sass
+++ b/app/assets/stylesheets/form.css.sass
@@ -2,6 +2,9 @@
   div.input
     margin-bottom: 10px
 
+  fieldset
+    padding: 10px
+
   label
     float: left
     width: 100px
@@ -51,3 +54,6 @@ label.collection_check_boxes
   margin: 0
   vertical-align: -2px
   margin-left:   2px
+
+.form-actions
+  background: #ffffff
