--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,10 +1,11 @@
-= simple_form_for @profile, :html => { :class => 'form-horizontal' } do |f|
+= simple_form_for @profile do |f|
   %fieldset
     %legend
       = controller.action_name.capitalize
       Profile
     = f.input :username
     = f.input :email
+    = f.input :password
   %fieldset
     %legend
       User Information
